<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YetAnotherSoundBoard</string>
    <string name="action_settings">Settings</string>
    <string name="text_loading">Loaded %x out of %y files.</string>
    <string name="no_network">Error loading file info: no network connection available.</string>
    <string name="bt_play">Play</string>
    <string name="bt_pause">Pause</string>
    <string name="dialog_info_title">Sound Information</string>
    <string name="msg_name">"Name: "</string>
    <string name="msg_filename">"Filename: "</string>
    <string name="msg_source">"Source: "</string>
    <string name="msg_hash">"Hash: "</string>
    <string name="action_about">About</string>
    <string name="dialog_about_title">About…</string>
    <string name="text_about">"About this app:\n\nThis app was created using the Android Studio.\n\nMany thanks to all the people who have uploaded the sounds to make our lives even more funny!"</string>
    <string name="pref_opt_out">Disable anonymous statistics</string>
    <string name="pref_opt_out_summ">Check this if you do not want to send any anonymous data to improve this application.</string>
    <string name="pref_update">Update interval</string>
    <string name="pref_update_summ">Set the interval of how often this app checks for updates. Setting this lower than the default value may increase battery and data usage.</string>
    <string name="pref_title">Settings</string>
    <string name="copyright">GiantTree © 2015. All rights reserved.\nUses Guava library for Android by Google.</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="connection_error_title">Connection Error!</string>
    <string name="connection_error_text">There was an error connecting to the server. Unfortunately, a connection to the server is required for this app to work.</string>
    <string name="action_github">View project on GitHub.</string>
    <string name="text_changelog">"<![CDATA[<h2>What\'s new:</h2><h3>Version 1.8:</h3>We are very sorry for any crashes and tried our best to fix those issues.<ul><li>Hardened code to not crash when an unpredictable error occurs.</li><li>Added support for the new theme on older Android versions.</li><li>Updated the loading routine.</li><li>Removed Google Analytics because of unpredictable crashes</li><li>More in-depth crash analysis with Fabric and Crashlytics</li></ul><h3>Version 1.7:</h3><ul><li>New fresh green design!</li><li>Sounds are now stored on internal storage</li><li>Numerous bug fixes</li><li>Implementation of Crashlytics to investigate any future application crashes</li></ul><h3>Version 1.6:</h3><ul><li>Various bug fixes\n</li><li>Enhanced UI-logic\n</li><li>Updated Third-Party libraries\n</li></ul>]]>"</string>
    <string name="desc_sidebar_bg">Sidebar background</string>

</resources>
