<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_title">
    <PreferenceCategory android:title="@string/pref_title">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/intervals"
            android:entryValues="@array/interval_values"
            android:key="update_interval"
            android:summary="@string/pref_update_summ"
            android:title="@string/pref_update" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="opt_out"
            android:summary="@string/pref_opt_out_summ"
            android:title="@string/pref_opt_out" />
    </PreferenceCategory>
    <Preference
        android:summary="@string/copyright"
        android:title="@string/app_name" />
</PreferenceScreen>